--- a/packages/models/tsconfig.json
+++ b/packages/models/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../node_modules/@standardnotes/config/src/tsconfig.json",
   "compilerOptions": {
     "skipLibCheck": true,
+    "sourceMap": true,
     "rootDir": "./src",
     "outDir": "./dist"
   },
