--- a/packages/ui-services/tsconfig.json
+++ b/packages/ui-services/tsconfig.json
@@ -2,9 +2,11 @@
   "extends": "../../UILib.tsconfig.json",
   "compilerOptions": {
     "skipLibCheck": true,
+    "sourceMap": true,
     "rootDir": "./src",
     "outDir": "./dist",
     "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
     "jsx": "react-jsx"
   },
   "include": ["src/**/*"],
