--- a/UILib.tsconfig.json
+++ b/UILib.tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "./node_modules/@standardnotes/config/src/tsconfig.json",
   "compilerOptions": {
+    "sourceMap": true,
     "module": "esnext",
     "target": "es6",
     "lib": ["es6", "dom", "es2016", "es2017"],
