--- a/packages/sncrypto-web/tsconfig.json
+++ b/packages/sncrypto-web/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "sourceMap": true,
     "target": "esnext",
     "module": "commonjs",
     "moduleResolution": "node",
@@ -9,7 +10,6 @@
     "esModuleInterop": true,
     "declaration": true,
     "outDir": "./dist",
-    "inlineSourceMap": true,
     "types": ["node"],
     "typeRoots": ["node_modules/@types", "typings"]
   },
