--- a/packages/web/linter.tsconfig.json
+++ b/packages/web/linter.tsconfig.json
@@ -1,3 +1,6 @@
 {
-  "extends": "../../node_modules/@standardnotes/config/src/linter.tsconfig.json"
+  "extends": "../../node_modules/@standardnotes/config/src/linter.tsconfig.json",
+  "compilerOptions": {
+    "sourceMap": true
+  }
 }
