--- a/packages/releases/package.json
+++ b/packages/releases/package.json
@@ -17,10 +17,11 @@
     "version": "yarn build"
   },
   "devDependencies": {
-    "@standardnotes/desktop": "workspace:*",
-    "@standardnotes/mobile": "workspace:*",
-    "@standardnotes/web": "workspace:*",
+    "@standardnotes/desktop": "3.106.55",
+    "@standardnotes/mobile": "3.53.55",
+    "@standardnotes/web": "3.161.2",
     "@types/node": "*",
     "typescript": "*"
-  }
+  },
+  "gitHead": "4e01f3b5b91f6b3191eaa97ce87bdd8e33d21f25"
 }
