--- a/packages/features/package.json
+++ b/packages/features/package.json
@@ -38,5 +38,6 @@
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "typescript": "4.9.3"
-  }
+  },
+  "gitHead": "4e01f3b5b91f6b3191eaa97ce87bdd8e33d21f25"
 }
