--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -23,9 +23,9 @@
   },
   "dependencies": {
     "@standardnotes/common": "^1.46.6",
-    "@standardnotes/features": "workspace:*",
-    "@standardnotes/responses": "workspace:*",
-    "@standardnotes/utils": "workspace:^",
+    "@standardnotes/features": "1.59.6",
+    "@standardnotes/responses": "1.13.25",
+    "@standardnotes/utils": "^1.16.6",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
@@ -38,5 +38,6 @@
     "reflect-metadata": "^0.1.13",
     "ts-jest": "^29.0.3",
     "typescript": "*"
-  }
+  },
+  "gitHead": "4e01f3b5b91f6b3191eaa97ce87bdd8e33d21f25"
 }
