--- a/packages/responses/package.json
+++ b/packages/responses/package.json
@@ -34,8 +34,9 @@
   },
   "dependencies": {
     "@standardnotes/common": "^1.46.6",
-    "@standardnotes/features": "workspace:*",
+    "@standardnotes/features": "1.59.6",
     "@standardnotes/security": "^1.7.6",
     "reflect-metadata": "^0.1.13"
-  }
+  },
+  "gitHead": "4e01f3b5b91f6b3191eaa97ce87bdd8e33d21f25"
 }
