--- a/packages/sncrypto-common/package.json
+++ b/packages/sncrypto-common/package.json
@@ -32,5 +32,6 @@
   },
   "dependencies": {
     "reflect-metadata": "^0.1.13"
-  }
+  },
+  "gitHead": "4e01f3b5b91f6b3191eaa97ce87bdd8e33d21f25"
 }
