--- a/packages/snjs/package.json
+++ b/packages/snjs/package.json
@@ -35,21 +35,21 @@
   "devDependencies": {
     "@babel/core": "*",
     "@babel/preset-env": "*",
-    "@standardnotes/api": "workspace:*",
+    "@standardnotes/api": "1.26.11",
     "@standardnotes/common": "^1.46.6",
     "@standardnotes/domain-core": "^1.12.0",
     "@standardnotes/domain-events": "^2.108.1",
-    "@standardnotes/encryption": "workspace:*",
-    "@standardnotes/features": "workspace:*",
-    "@standardnotes/files": "workspace:*",
-    "@standardnotes/models": "workspace:*",
-    "@standardnotes/responses": "workspace:*",
+    "@standardnotes/encryption": "1.21.39",
+    "@standardnotes/features": "1.59.6",
+    "@standardnotes/files": "1.15.10",
+    "@standardnotes/models": "1.45.6",
+    "@standardnotes/responses": "1.13.25",
     "@standardnotes/security": "^1.7.6",
-    "@standardnotes/services": "workspace:*",
+    "@standardnotes/services": "1.59.13",
     "@standardnotes/settings": "^1.20.0",
-    "@standardnotes/sncrypto-common": "workspace:*",
-    "@standardnotes/sncrypto-web": "workspace:*",
-    "@standardnotes/utils": "workspace:*",
+    "@standardnotes/sncrypto-common": "1.13.4",
+    "@standardnotes/sncrypto-web": "1.14.4",
+    "@standardnotes/utils": "1.16.6",
     "@types/crypto-js": "^4.1.1",
     "@types/jest": "^29.2.3",
     "@types/jsdom": "^20.0.1",
@@ -85,5 +85,6 @@
     "webpack": "*",
     "webpack-cli": "*",
     "webpack-merge": "^5.8.0"
-  }
+  },
+  "gitHead": "4e01f3b5b91f6b3191eaa97ce87bdd8e33d21f25"
 }
